# ddd-scaffold

./: .flake8  .gitignore  Makefile  README  README.md  populate_tables.py  pyproject.toml  tasks.py
ddd_scaffold/: __main__.py
ddd_scaffold/adapters/external_api/: dtos.py  external_api_adapter.py
ddd_scaffold/adapters/fake/: entities.py  factory.py  fake_customer_lookup.py  fake_notifier.py  fake_order_processor.py
ddd_scaffold/domain/: domain_logic.py
ddd_scaffold/domain/interfaces/: customer_lookup.py  notifier.py  order_processor.py
ddd_scaffold/domain/models/: customer.py  order.py
ddd_scaffold/ui/: cli.py
tests/: conftest.py
tests/domain/: test_domain_logic.py
